Fix alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -2,10 +2,11 @@
 *, *:before, *:after {
   box-sizing: border-box;
 }
-body {
+body, html {
   background-color: #cacaca;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 10px;
+  font-weight: 300;
   color: #666;
 }
 nav {
@@ -52,9 +53,7 @@ nav button {
 }
 .small {
   margin-left: 2em;
-}
-p {
-  display: inline;
+  width: 100%;
 }
 .bus-icon {
   width: 13.1em;
@@ -62,12 +61,13 @@ p {
   background-image: url(../images/bus-icon.png);
 }
 .filter button {
-  font-size: 2em;
+  font-size: 1.75em;
   color: #a1a1a1;
   border: 1px solid #a1a1a1; 
   margin: 0 .5em .5em 0;
-  padding: .5em;
+  padding: 0 .5em;
   border-radius: 10px;
+  height: 2em;
 }
 .list-headings {
   font-weight: 600;
@@ -79,7 +79,7 @@ p {
 /* typography */
 h1, h2 {
   font-size: 2em;
-  font-weight: 600;
+  font-weight: 500;
 }
 h1 {
   margin: 1em 0 .5em 0;
@@ -87,6 +87,7 @@ h1 {
 }
 .arriving h2,.filter h2,.bus-listings h2 {
   margin: 1em 0 .5em 0;
+  color: #a1a1a1;
 }
 /*h2 {
   padding: 1em 0 .5em 0;
@@ -99,12 +100,16 @@ h3 {
   text-transform: uppercase;
   background-color: #EFEFF4;
   color: #00829A;
-  padding: .5em 1em;
+  padding: .5em 2rem;
 }
 ul {
   font-size: 2em;
+  /*line-height: 2.6rem;*/
   display: flex;
   width: 100%;
+}
+li {
+  min-height: auto;
 }
 .line-number {
   font-size: 2em;
@@ -125,6 +130,13 @@ ul {
   align-items: baseline;
   display: flex;
   justify-content: space-between;
+}
+.shrink {
+  min-height: 6em;
+  padding: 1em 0;
+}
+.multiple {
+  border-bottom: 1px solid #cacaca;
 }
 /* flexbox shenanigans */
 .line-number {
